<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.saceone.tfg.MainActivityFragment"
                tools:showIn="@layout/activity_main">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv1"
        app:cardBackgroundColor="@color/accent"
        app:cardElevation="15dp"
        app:cardCornerRadius="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cv1_txt1"
                android:text="@string/cv1_txt1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textSize="30sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cv1_txt2"
                android:text="@string/cv1_txt2"
                android:layout_below="@+id/cv1_txt1"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv1"
        android:layout_marginTop="16dp"
        android:id="@+id/cv2"
        app:cardBackgroundColor="@color/accent"
        app:cardElevation="15dp"
        app:cardCornerRadius="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cv2_txt1"
                android:text="@string/cv2_txt1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textSize="30sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cv2_txt2"
                android:text="@string/cv2_txt2"
                android:layout_below="@+id/cv2_txt1"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv2"
        android:layout_marginTop="16dp"
        android:id="@+id/cv3"
        app:cardBackgroundColor="@color/accent"
        app:cardElevation="15dp"
        app:cardCornerRadius="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cv3_txt1"
                android:text="@string/cv3_txt1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textSize="30sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cv3_txt2"
                android:text="@string/cv3_txt2"
                android:layout_below="@+id/cv3_txt1"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
