<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp"
              android:background="@android:color/white">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/logo_rugp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/fgp_logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="14dp"
        android:layout_marginBottom="10dp"
        android:text="@string/app_description"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_food"
        android:text="@string/service"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackground"
        android:layout_weight="1"
        android:drawableLeft="@drawable/btnservice"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_settings"
        android:text="@string/btnSettings"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackground"
        android:layout_weight="1"
        android:drawableLeft="@drawable/btnsettings"/>
</LinearLayout>