<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:padding="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_gestion_tags"
                    android:text="@string/gestion_tags"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/btntags"/>

                <Button
                    android:padding="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_gestion_residentes"
                    android:text="@string/gestion_residentes"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/btnresidentes"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:padding="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_estadisticas"
                    android:text="Archivos"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/btnfiles"/>

                <Button
                    android:padding="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_compras"
                    android:text="@string/btnCompras"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/btncompra"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <Button
                    android:padding="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_instagram"
                    android:text="@string/btnInstagram"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/btninstagram"/>

                <Button
                    android:padding="10dp"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_website"
                    android:text="BACKUPS"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/btncloud"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>